# luma

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DESIGN.md  FEATURES.md  README.md  ROADMAP.md
builds/: json_nested_test.rs  json_test.rs  luma_runtime.rs  toml_test.rs  write_escape_test  write_escape_test.rs
editor/tree-sitter-luma/: CMakeLists.txt  Cargo.toml  Makefile  binding.gyp  grammar.js  package-lock.json  package.json  tree-sitter.json
editor/zed-luma/: extension.toml  grammars.toml
src/: debug.rs  lib.rs  main.rs
src/ast/: mod.rs
src/cli/: mod.rs
src/comp/: codegen.rs  mod.rs  runtime.rs
src/debug/: config.rs  format.rs  interpreter.rs  lexer.rs  mod.rs  parser.rs
src/error/: collector.rs  diagnostic.rs  lexer_errors.rs  mod.rs  parse_errors.rs  runtime_errors.rs
src/interpreter/: assign.rs  builtins.rs  control.rs  core.rs  expressions.rs  mod.rs  operations.rs  statements.rs  structs.rs  value.rs
src/lexer/: comments.rs  core.rs  identifiers.rs  mod.rs  reader.rs  strings.rs  symbols.rs  tokens.rs
src/parser/: assignment.rs  binary.rs  call.rs  core.rs  declarations.rs  error.rs  expressions.rs  forloop.rs  ifelse.rs  matching.rs  mod.rs  primary.rs  printing.rs  statements.rs  structs.rs  whileloop.rs
src/syntax/: keywords.rs  mod.rs  operators.rs
tests/: break.lm  errors.lm  fetch.lm  file.lm  floatmod.lm  forloop.lm  functions.lm  input.lm  list_return.lm  lists.lm  logic.lm  match.lm  match_string.lm  match_struct.lm  maybe.lm  methods.lm  modulo_neg.lm  not.lm  print.lm  read.lm  run.lm  scope.lm  strings.lm  void.lm  worry.lm  write.lm
tests/collections/: lists.lm  tables.lm
tests/control/: flow.lm  match.lm
(+47 files in other folders)
