[package]
name = "luma"
version = "0.1.0"
edition = "2024"
description = "A small, kind programming language"

[lib]
name = "luma"
path = "src/lib.rs"

[[bin]]
name = "luma"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
ariadne = "0.6.0"
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
rand = "0.10.0"
thiserror = "2.0.18"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
